build/ml/cp_parser_tdi.output
   0  $accept : %entry% $end

   1  main : section EOI

   2  section : S_VERSION STRING
   3          | S_PARAMETER BEGIN params END
   4          | S_TARGETS BEGIN targets END
   5          | name SEP1 S_FUN BEGIN instructions END
   6          | name SEP1 S_FUN LPAREN expr RPAREN BEGIN instructions END
   7          | S_TARGETS BEGIN targets END
   8          | S_TARGETS LPAREN expr RPAREN BEGIN targets END

   9  params : instruction EOI
  10         | instruction EOI params

  11  targets : target EOI
  12          | target EOI targets

  13  target : name SEP1 S_TARGET BEGIN instructions END
  14         | name SEP1 S_TARGET LPAREN expr RPAREN BEGIN instructions END

  15  data_exprs : data_expr EOI
  16             | data_expr EOI data_exprs

  17  control_exprs : control_expr EOI
  18                | control_expr EOI control_exprs

  19  data_expr : element ASSIGN expr

  20  control_expr : IF expr THEN block_instr
  21               | IF expr THEN block_instr ELSE block_instr
  22               | MATCH expr WITH BEGIN when_list END
  23               | FOR expr EQ range DO block_instr
  24               | FOREACH VAR IDENT IN VAR IDENT DO block_instr
  25               | FOREACH VAR IDENT IN name LPAREN VAR IDENT RPAREN DO block_instr
  26               | func

  27  block_instr : instruction
  28              | BEGIN instructions END

  29  when_list : when_expr
  30            | when_expr when_list

  31  when_expr : WHEN expr SEP1 instructions

  32  var_name : VAR IDENT

  33  name_list : name
  34            | name SEP2 name_list

  35  name : IDENT
  36       | VAR IDENT

  37  func : name LPAREN arg_list RPAREN
  38       | name LPAREN RPAREN

  39  arg_list : arg
  40           | arg SEP2 arg_list

  41  arg : expr

  42  instructions : instruction EOI
  43               | instruction EOI instructions

  44  instruction : data_expr
  45              | control_expr
  46              | FOREACH VAR IDENT IN VAR IDENT DO block_instr

  47  expr : expr PLUS expr
  48       | MINUS expr
  49       | expr MINUS expr
  50       | expr TIMES expr
  51       | expr DIVI expr
  52       | expr EQ expr
  53       | expr LT expr
  54       | expr GT expr
  55       | expr ASSIGN expr
  56       | expr GEQ expr
  57       | expr NEQ expr
  58       | expr AND expr
  59       | expr OR expr
  60       | expr XOR expr
  61       | LPAREN expr RPAREN
  62       | element
  63       | func

  64  range : expr DOWNTO expr
  65        | expr TO expr
  66        | expr

  67  element : STRING
  68          | VALUE
  69          | name
  70          | name DOT LBRAK range RBRAK
  71          | name DOT name

  72  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (72)

	IDENT  shift 3
	S_VERSION  shift 4
	S_PARAMETER  shift 5
	S_TARGETS  shift 6
	VAR  shift 7
	.  error

	main  goto 8
	section  goto 9
	name  goto 10


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	name : IDENT .  (35)

	.  reduce 35


state 4
	section : S_VERSION . STRING  (2)

	STRING  shift 11
	.  error


state 5
	section : S_PARAMETER . BEGIN params END  (3)

	BEGIN  shift 12
	.  error


state 6
	section : S_TARGETS . BEGIN targets END  (4)
	section : S_TARGETS . BEGIN targets END  (7)
	section : S_TARGETS . LPAREN expr RPAREN BEGIN targets END  (8)

	BEGIN  shift 13
	LPAREN  shift 14
	.  error


state 7
	name : VAR . IDENT  (36)

	IDENT  shift 15
	.  error


state 8
	%entry% : '\001' main .  (72)

	.  reduce 72


state 9
	main : section . EOI  (1)

	EOI  shift 16
	.  error


state 10
	section : name . SEP1 S_FUN BEGIN instructions END  (5)
	section : name . SEP1 S_FUN LPAREN expr RPAREN BEGIN instructions END  (6)

	SEP1  shift 17
	.  error


state 11
	section : S_VERSION STRING .  (2)

	.  reduce 2


state 12
	section : S_PARAMETER BEGIN . params END  (3)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	FOREACH  shift 20
	FOR  shift 21
	IF  shift 22
	MATCH  shift 23
	VAR  shift 7
	.  error

	params  goto 24
	name  goto 25
	instruction  goto 26
	data_expr  goto 27
	control_expr  goto 28
	element  goto 29
	func  goto 30


state 13
	section : S_TARGETS BEGIN . targets END  (4)
	section : S_TARGETS BEGIN . targets END  (7)

	IDENT  shift 3
	VAR  shift 7
	.  error

	targets  goto 31
	name  goto 32
	target  goto 33


state 14
	section : S_TARGETS LPAREN . expr RPAREN BEGIN targets END  (8)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 36
	element  goto 37
	func  goto 38


state 15
	name : VAR IDENT .  (36)

	.  reduce 36


state 16
	main : section EOI .  (1)

	.  reduce 1


state 17
	section : name SEP1 . S_FUN BEGIN instructions END  (5)
	section : name SEP1 . S_FUN LPAREN expr RPAREN BEGIN instructions END  (6)

	S_FUN  shift 39
	.  error


state 18
	element : STRING .  (67)

	.  reduce 67


state 19
	element : VALUE .  (68)

	.  reduce 68


state 20
	control_expr : FOREACH . VAR IDENT IN VAR IDENT DO block_instr  (24)
	control_expr : FOREACH . VAR IDENT IN name LPAREN VAR IDENT RPAREN DO block_instr  (25)
	instruction : FOREACH . VAR IDENT IN VAR IDENT DO block_instr  (46)

	VAR  shift 40
	.  error


state 21
	control_expr : FOR . expr EQ range DO block_instr  (23)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 41
	element  goto 37
	func  goto 38


state 22
	control_expr : IF . expr THEN block_instr  (20)
	control_expr : IF . expr THEN block_instr ELSE block_instr  (21)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 42
	element  goto 37
	func  goto 38


state 23
	control_expr : MATCH . expr WITH BEGIN when_list END  (22)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 43
	element  goto 37
	func  goto 38


state 24
	section : S_PARAMETER BEGIN params . END  (3)

	END  shift 44
	.  error


state 25
	func : name . LPAREN arg_list RPAREN  (37)
	func : name . LPAREN RPAREN  (38)
	element : name .  (69)
	element : name . DOT LBRAK range RBRAK  (70)
	element : name . DOT name  (71)

	DOT  shift 45
	LPAREN  shift 46
	DO  reduce 69
	THEN  reduce 69
	ELSE  reduce 69
	WITH  reduce 69
	EOI  reduce 69
	SEP1  reduce 69
	SEP2  reduce 69
	RPAREN  reduce 69
	RBRAK  reduce 69
	EQ  reduce 69
	NEQ  reduce 69
	LT  reduce 69
	GT  reduce 69
	ASSIGN  reduce 69
	GEQ  reduce 69
	PLUS  reduce 69
	MINUS  reduce 69
	TIMES  reduce 69
	DIVI  reduce 69
	AND  reduce 69
	OR  reduce 69
	XOR  reduce 69
	TO  reduce 69
	DOWNTO  reduce 69


state 26
	params : instruction . EOI  (9)
	params : instruction . EOI params  (10)

	EOI  shift 47
	.  error


state 27
	instruction : data_expr .  (44)

	.  reduce 44


state 28
	instruction : control_expr .  (45)

	.  reduce 45


state 29
	data_expr : element . ASSIGN expr  (19)

	ASSIGN  shift 48
	.  error


state 30
	control_expr : func .  (26)

	.  reduce 26


state 31
	section : S_TARGETS BEGIN targets . END  (4)
	section : S_TARGETS BEGIN targets . END  (7)

	END  shift 49
	.  error


state 32
	target : name . SEP1 S_TARGET BEGIN instructions END  (13)
	target : name . SEP1 S_TARGET LPAREN expr RPAREN BEGIN instructions END  (14)

	SEP1  shift 50
	.  error


state 33
	targets : target . EOI  (11)
	targets : target . EOI targets  (12)

	EOI  shift 51
	.  error


state 34
	expr : LPAREN . expr RPAREN  (61)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 52
	element  goto 37
	func  goto 38


state 35
	expr : MINUS . expr  (48)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 53
	element  goto 37
	func  goto 38


state 36
	section : S_TARGETS LPAREN expr . RPAREN BEGIN targets END  (8)
	expr : expr . PLUS expr  (47)
	expr : expr . MINUS expr  (49)
	expr : expr . TIMES expr  (50)
	expr : expr . DIVI expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . LT expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . ASSIGN expr  (55)
	expr : expr . GEQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . XOR expr  (60)

	RPAREN  shift 54
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	GT  shift 58
	ASSIGN  shift 59
	GEQ  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVI  shift 64
	AND  shift 65
	OR  shift 66
	XOR  shift 67
	.  error


state 37
	expr : element .  (62)

	.  reduce 62


state 38
	expr : func .  (63)

	.  reduce 63


state 39
	section : name SEP1 S_FUN . BEGIN instructions END  (5)
	section : name SEP1 S_FUN . LPAREN expr RPAREN BEGIN instructions END  (6)

	BEGIN  shift 68
	LPAREN  shift 69
	.  error


state 40
	control_expr : FOREACH VAR . IDENT IN VAR IDENT DO block_instr  (24)
	control_expr : FOREACH VAR . IDENT IN name LPAREN VAR IDENT RPAREN DO block_instr  (25)
	instruction : FOREACH VAR . IDENT IN VAR IDENT DO block_instr  (46)

	IDENT  shift 70
	.  error


state 41
	control_expr : FOR expr . EQ range DO block_instr  (23)
	expr : expr . PLUS expr  (47)
	expr : expr . MINUS expr  (49)
	expr : expr . TIMES expr  (50)
	expr : expr . DIVI expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . LT expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . ASSIGN expr  (55)
	expr : expr . GEQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . XOR expr  (60)

	EQ  shift 71
	NEQ  shift 56
	LT  shift 57
	GT  shift 58
	ASSIGN  shift 59
	GEQ  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVI  shift 64
	AND  shift 65
	OR  shift 66
	XOR  shift 67
	.  error


state 42
	control_expr : IF expr . THEN block_instr  (20)
	control_expr : IF expr . THEN block_instr ELSE block_instr  (21)
	expr : expr . PLUS expr  (47)
	expr : expr . MINUS expr  (49)
	expr : expr . TIMES expr  (50)
	expr : expr . DIVI expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . LT expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . ASSIGN expr  (55)
	expr : expr . GEQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . XOR expr  (60)

	THEN  shift 72
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	GT  shift 58
	ASSIGN  shift 59
	GEQ  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVI  shift 64
	AND  shift 65
	OR  shift 66
	XOR  shift 67
	.  error


state 43
	control_expr : MATCH expr . WITH BEGIN when_list END  (22)
	expr : expr . PLUS expr  (47)
	expr : expr . MINUS expr  (49)
	expr : expr . TIMES expr  (50)
	expr : expr . DIVI expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . LT expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . ASSIGN expr  (55)
	expr : expr . GEQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . XOR expr  (60)

	WITH  shift 73
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	GT  shift 58
	ASSIGN  shift 59
	GEQ  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVI  shift 64
	AND  shift 65
	OR  shift 66
	XOR  shift 67
	.  error


state 44
	section : S_PARAMETER BEGIN params END .  (3)

	.  reduce 3


state 45
	element : name DOT . LBRAK range RBRAK  (70)
	element : name DOT . name  (71)

	IDENT  shift 3
	VAR  shift 7
	LBRAK  shift 74
	.  error

	name  goto 75


state 46
	func : name LPAREN . arg_list RPAREN  (37)
	func : name LPAREN . RPAREN  (38)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	RPAREN  shift 76
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 77
	element  goto 37
	func  goto 38
	arg_list  goto 78
	arg  goto 79


state 47
	params : instruction EOI .  (9)
	params : instruction EOI . params  (10)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	FOREACH  shift 20
	FOR  shift 21
	IF  shift 22
	MATCH  shift 23
	VAR  shift 7
	END  reduce 9

	params  goto 80
	name  goto 25
	instruction  goto 26
	data_expr  goto 27
	control_expr  goto 28
	element  goto 29
	func  goto 30


state 48
	data_expr : element ASSIGN . expr  (19)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 81
	element  goto 37
	func  goto 38


49: reduce/reduce conflict (reduce 4, reduce 7) on EOI
state 49
	section : S_TARGETS BEGIN targets END .  (4)
	section : S_TARGETS BEGIN targets END .  (7)

	.  reduce 4


state 50
	target : name SEP1 . S_TARGET BEGIN instructions END  (13)
	target : name SEP1 . S_TARGET LPAREN expr RPAREN BEGIN instructions END  (14)

	S_TARGET  shift 82
	.  error


state 51
	targets : target EOI .  (11)
	targets : target EOI . targets  (12)

	IDENT  shift 3
	VAR  shift 7
	END  reduce 11

	targets  goto 83
	name  goto 32
	target  goto 33


state 52
	expr : expr . PLUS expr  (47)
	expr : expr . MINUS expr  (49)
	expr : expr . TIMES expr  (50)
	expr : expr . DIVI expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . LT expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . ASSIGN expr  (55)
	expr : expr . GEQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . XOR expr  (60)
	expr : LPAREN expr . RPAREN  (61)

	RPAREN  shift 84
	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	GT  shift 58
	ASSIGN  shift 59
	GEQ  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVI  shift 64
	AND  shift 65
	OR  shift 66
	XOR  shift 67
	.  error


53: shift/reduce conflict (shift 59, reduce 48) on ASSIGN
53: shift/reduce conflict (shift 67, reduce 48) on XOR
state 53
	expr : expr . PLUS expr  (47)
	expr : MINUS expr .  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . TIMES expr  (50)
	expr : expr . DIVI expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . LT expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . ASSIGN expr  (55)
	expr : expr . GEQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . XOR expr  (60)

	EQ  shift 55
	NEQ  shift 56
	LT  shift 57
	GT  shift 58
	ASSIGN  shift 59
	GEQ  shift 60
	TIMES  shift 63
	DIVI  shift 64
	AND  shift 65
	OR  shift 66
	XOR  shift 67
	DO  reduce 48
	THEN  reduce 48
	ELSE  reduce 48
	WITH  reduce 48
	EOI  reduce 48
	SEP1  reduce 48
	SEP2  reduce 48
	RPAREN  reduce 48
	RBRAK  reduce 48
	PLUS  reduce 48
	MINUS  reduce 48
	TO  reduce 48
	DOWNTO  reduce 48


state 54
	section : S_TARGETS LPAREN expr RPAREN . BEGIN targets END  (8)

	BEGIN  shift 85
	.  error


state 55
	expr : expr EQ . expr  (52)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 86
	element  goto 37
	func  goto 38


state 56
	expr : expr NEQ . expr  (57)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 87
	element  goto 37
	func  goto 38


state 57
	expr : expr LT . expr  (53)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 88
	element  goto 37
	func  goto 38


state 58
	expr : expr GT . expr  (54)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 89
	element  goto 37
	func  goto 38


state 59
	expr : expr ASSIGN . expr  (55)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 90
	element  goto 37
	func  goto 38


state 60
	expr : expr GEQ . expr  (56)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 91
	element  goto 37
	func  goto 38


state 61
	expr : expr PLUS . expr  (47)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 92
	element  goto 37
	func  goto 38


state 62
	expr : expr MINUS . expr  (49)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 93
	element  goto 37
	func  goto 38


state 63
	expr : expr TIMES . expr  (50)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 94
	element  goto 37
	func  goto 38


state 64
	expr : expr DIVI . expr  (51)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 95
	element  goto 37
	func  goto 38


state 65
	expr : expr AND . expr  (58)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 96
	element  goto 37
	func  goto 38


state 66
	expr : expr OR . expr  (59)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 97
	element  goto 37
	func  goto 38


state 67
	expr : expr XOR . expr  (60)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 98
	element  goto 37
	func  goto 38


state 68
	section : name SEP1 S_FUN BEGIN . instructions END  (5)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	FOREACH  shift 20
	FOR  shift 21
	IF  shift 22
	MATCH  shift 23
	VAR  shift 7
	.  error

	name  goto 25
	instructions  goto 99
	instruction  goto 100
	data_expr  goto 27
	control_expr  goto 28
	element  goto 29
	func  goto 30


state 69
	section : name SEP1 S_FUN LPAREN . expr RPAREN BEGIN instructions END  (6)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 101
	element  goto 37
	func  goto 38


state 70
	control_expr : FOREACH VAR IDENT . IN VAR IDENT DO block_instr  (24)
	control_expr : FOREACH VAR IDENT . IN name LPAREN VAR IDENT RPAREN DO block_instr  (25)
	instruction : FOREACH VAR IDENT . IN VAR IDENT DO block_instr  (46)

	IN  shift 102
	.  error


state 71
	control_expr : FOR expr EQ . range DO block_instr  (23)
	expr : expr EQ . expr  (52)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 103
	element  goto 37
	range  goto 104
	func  goto 38


state 72
	control_expr : IF expr THEN . block_instr  (20)
	control_expr : IF expr THEN . block_instr ELSE block_instr  (21)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	FOREACH  shift 20
	FOR  shift 21
	IF  shift 22
	BEGIN  shift 105
	MATCH  shift 23
	VAR  shift 7
	.  error

	name  goto 25
	instruction  goto 106
	data_expr  goto 27
	control_expr  goto 28
	element  goto 29
	block_instr  goto 107
	func  goto 30


state 73
	control_expr : MATCH expr WITH . BEGIN when_list END  (22)

	BEGIN  shift 108
	.  error


state 74
	element : name DOT LBRAK . range RBRAK  (70)

	STRING  shift 18
	IDENT  shift 3
	VALUE  shift 19
	VAR  shift 7
	LPAREN  shift 34
	MINUS  shift 35
	.  error

	name  goto 25
	expr  goto 109
	element  goto 37
	range  goto 110
	func  goto 38


state 75
	element : name DOT name .  (71)

	.  reduce 71


state 76
	func : name LPAREN RPAREN .  (38)

	.  reduce 38


state 77
	arg : expr .  (41)
	expr : expr . PLUS expr  (47)
	expr : expr . MINUS expr  (49)
	expr : expr . TIMES expr  (50)
	expr : expr . DIVI expr  (51)
	expr : expr . EQ expr  (52)
	expr : expr . LT expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . ASSIGN expr  (55)
	expr : expr . GEQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . AND expr  (58)
	expr : expr . OR expr  (59)
	expr : expr . XOR expr  (60)
